# pyresult

./: README.md  pyproject.toml
.github/workflows/: tests.yaml
src/pyresult/: __init__.py  decorators.py  example.py  result.py
tests/: test_decorators.py  test_result.py
