[project]
name = "pyresult"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "frpelaez", email = "franparias2003@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
example = "pyresult.example:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
